src/main/java/ru/itmo/nerc/vcb/bot/chat/antlr/InlineQueryGrammarParser.java
// Generated from InlineQueryGrammar.g4 by ANTLR 4.13.1

package ru.itmo.nerc.vcb.bot.chat.antlr;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class InlineQueryGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, WS=31, ANY=32;
	public static final int
		RULE_inlineQuery = 0, RULE_anyParameter = 1, RULE_taskParameter = 2, RULE_taskOperator = 3, 
		RULE_groupsParameter = 4, RULE_groupsOperator = 5, RULE_typeParameter = 6, 
		RULE_typeOperator = 7, RULE_idParameter = 8, RULE_idOperator = 9, RULE_answerParameter = 10, 
		RULE_answerOperator = 11, RULE_keyParameter = 12, RULE_keyOperator = 13, 
		RULE_valueParameter = 14, RULE_valueOperator = 15, RULE_ignoreParameter = 16, 
		RULE_sentencesArray = 17, RULE_sentenceWithComma = 18, RULE_sentence = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"inlineQuery", "anyParameter", "taskParameter", "taskOperator", "groupsParameter", 
			"groupsOperator", "typeParameter", "typeOperator", "idParameter", "idOperator", 
			"answerParameter", "answerOperator", "keyParameter", "keyOperator", "valueParameter", 
			"valueOperator", "ignoreParameter", "sentencesArray", "sentenceWithComma", 
			"sentence"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'???'", "'t'", "'task'", "'Task'", "'\\u0437\\u0430\\u0434\\u0430\\u0447\\u0430'", 
			"'\\u0417\\u0430\\u0434\\u0430\\u0447\\u0430'", "'h'", "'g'", "'halls'", 
			"'groups'", "'Halls'", "'Groups'", "'\\u0445\\u043E\\u043B\\u043B\\u044B'", 
			"'\\u0425\\u043E\\u043B\\u043B\\u044B'", "'type'", "'\\u0442\\u0438\\u043F'", 
			"'id'", "'ID'", "'answer'", "'\\u043E\\u0442\\u0432\\u0435\\u0442'", 
			"'key'", "'Key'", "'\\u043A\\u043B\\u044E\\u0447'", "'\\u041A\\u043B\\u044E\\u0447'", 
			"'value'", "'Value'", "'\\u0437\\u043D\\u0430\\u0447\\u0435\\u043D\\u0438\\u0435'", 
			"'\\u0417\\u043D\\u0430\\u0447\\u0435\\u043D\\u0438\\u0435'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "WS", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InlineQueryGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InlineQueryGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InlineQueryContext extends ParserRuleContext {
		public String json = "{";;
		public AnyParameterContext anyParameter;
		public List<IgnoreParameterContext> ignoreParameter() {
			return getRuleContexts(IgnoreParameterContext.class);
		}
		public IgnoreParameterContext ignoreParameter(int i) {
			return getRuleContext(IgnoreParameterContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(InlineQueryGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(InlineQueryGrammarParser.WS, i);
		}
		public List<AnyParameterContext> anyParameter() {
			return getRuleContexts(AnyParameterContext.class);
		}
		public AnyParameterContext anyParameter(int i) {
			return getRuleContext(AnyParameterContext.class,i);
		}
		public InlineQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).enterInlineQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).exitInlineQuery(this);
		}
	}

	public final InlineQueryContext inlineQuery() throws RecognitionException {
		InlineQueryContext _localctx = new InlineQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inlineQuery);
		int _la;
		try {
			int _alt;
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(40);
						ignoreParameter();
						setState(41);
						match(T__0);
						setState(45);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(42);
								match(WS);
								}
								} 
							}
							setState(47);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
						}
						}
						} 
					}
					setState(52);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(53);
				ignoreParameter();
				_localctx.json += "}";
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(66);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6442450946L) != 0)) {
							{
							{
							setState(56);
							ignoreParameter();
							setState(57);
							match(T__0);
							setState(61);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
							while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
								if ( _alt==1 ) {
									{
									{
									setState(58);
									match(WS);
									}
									} 
								}
								setState(63);
								_errHandler.sync(this);
								_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
							}
							}
							}
							setState(68);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(69);
						((InlineQueryContext)_localctx).anyParameter = anyParameter();
						_localctx.json += ((InlineQueryContext)_localctx).anyParameter.json + ",";
						setState(71);
						match(T__0);
						setState(75);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(72);
								match(WS);
								}
								} 
							}
							setState(77);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
						}
						}
						} 
					}
					setState(82);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6442450946L) != 0)) {
					{
					{
					setState(83);
					ignoreParameter();
					setState(84);
					match(T__0);
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(85);
							match(WS);
							}
							} 
						}
						setState(90);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
					}
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(96);
				((InlineQueryContext)_localctx).anyParameter = anyParameter();
				_localctx.json += ((InlineQueryContext)_localctx).anyParameter.json + "}";
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(98);
					match(T__0);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(111);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6442450946L) != 0)) {
							{
							{
							setState(101);
							ignoreParameter();
							setState(102);
							match(T__0);
							setState(106);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
							while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
								if ( _alt==1 ) {
									{
									{
									setState(103);
									match(WS);
									}
									} 
								}
								setState(108);
								_errHandler.sync(this);
								_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
							}
							}
							}
							setState(113);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(114);
						((InlineQueryContext)_localctx).anyParameter = anyParameter();
						_localctx.json += ((InlineQueryContext)_localctx).anyParameter.json + ",";
						setState(116);
						match(T__0);
						setState(120);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(117);
								match(WS);
								}
								} 
							}
							setState(122);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
						}
						}
						} 
					}
					setState(127);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6442450946L) != 0)) {
					{
					{
					setState(128);
					ignoreParameter();
					setState(129);
					match(T__0);
					setState(133);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(130);
							match(WS);
							}
							} 
						}
						setState(135);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					}
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(141);
				((InlineQueryContext)_localctx).anyParameter = anyParameter();
				_localctx.json += ((InlineQueryContext)_localctx).anyParameter.json;
				setState(143);
				match(T__0);
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(144);
						match(WS);
						}
						} 
					}
					setState(149);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(150);
						ignoreParameter();
						setState(151);
						match(T__0);
						setState(155);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(152);
								match(WS);
								}
								} 
							}
							setState(157);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
						}
						}
						} 
					}
					setState(162);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				}
				setState(163);
				ignoreParameter();
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(164);
					match(T__0);
					}
				}

				_localctx.json += "}";
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnyParameterContext extends ParserRuleContext {
		public String json = "";;
		public TaskParameterContext taskParameter;
		public GroupsParameterContext groupsParameter;
		public TypeParameterContext typeParameter;
		public IdParameterContext idParameter;
		public AnswerParameterContext answerParameter;
		public KeyParameterContext keyParameter;
		public ValueParameterContext valueParameter;
		public TaskParameterContext taskParameter() {
			return getRuleContext(TaskParameterContext.class,0);
		}
		public GroupsParameterContext groupsParameter() {
			return getRuleContext(GroupsParameterContext.class,0);
		}
		public TypeParameterContext typeParameter() {
			return getRuleContext(TypeParameterContext.class,0);
		}
		public IdParameterContext idParameter() {
			return getRuleContext(IdParameterContext.class,0);
		}
		public AnswerParameterContext answerParameter() {
			return getRuleContext(AnswerParameterContext.class,0);
		}
		public KeyParameterContext keyParameter() {
			return getRuleContext(KeyParameterContext.class,0);
		}
		public ValueParameterContext valueParameter() {
			return getRuleContext(ValueParameterContext.class,0);
		}
		public AnyParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).enterAnyParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).exitAnyParameter(this);
		}
	}

	public final AnyParameterContext anyParameter() throws RecognitionException {
		AnyParameterContext _localctx = new AnyParameterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_anyParameter);
		try {
			setState(192);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				((AnyParameterContext)_localctx).taskParameter = taskParameter();

				        ((AnyParameterContext)_localctx).json =  ((AnyParameterContext)_localctx).taskParameter.json;
				    
				}
				break;
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				((AnyParameterContext)_localctx).groupsParameter = groupsParameter();

				        ((AnyParameterContext)_localctx).json =  ((AnyParameterContext)_localctx).groupsParameter.json;
				    
				}
				break;
			case T__15:
			case T__16:
				enterOuterAlt(_localctx, 3);
				{
				setState(177);
				((AnyParameterContext)_localctx).typeParameter = typeParameter();

				        ((AnyParameterContext)_localctx).json =  ((AnyParameterContext)_localctx).typeParameter.json;
				    
				}
				break;
			case T__17:
			case T__18:
				enterOuterAlt(_localctx, 4);
				{
				setState(180);
				((AnyParameterContext)_localctx).idParameter = idParameter();

				        ((AnyParameterContext)_localctx).json =  ((AnyParameterContext)_localctx).idParameter.json;
				    
				}
				break;
			case T__19:
			case T__20:
				enterOuterAlt(_localctx, 5);
				{
				setState(183);
				((AnyParameterContext)_localctx).answerParameter = answerParameter();

				        ((AnyParameterContext)_localctx).json =  ((AnyParameterContext)_localctx).answerParameter.json;
				    
				}
				break;
			case T__21:
			case T__22:
			case T__23:
			case T__24:
				enterOuterAlt(_localctx, 6);
				{
				setState(186);
				((AnyParameterContext)_localctx).keyParameter = keyParameter();

				        ((AnyParameterContext)_localctx).json =  ((AnyParameterContext)_localctx).keyParameter.json;
				    
				}
				break;
			case T__25:
			case T__26:
			case T__27:
			case T__28:
				enterOuterAlt(_localctx, 7);
				{
				setState(189);
				((AnyParameterContext)_localctx).valueParameter = valueParameter();

				        ((AnyParameterContext)_localctx).json =  ((AnyParameterContext)_localctx).valueParameter.json;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TaskParameterContext extends ParserRuleContext {
		public String json;
		public SentenceWithCommaContext sentenceWithComma;
		public TaskOperatorContext taskOperator() {
			return getRuleContext(TaskOperatorContext.class,0);
		}
		public SentenceWithCommaContext sentenceWithComma() {
			return getRuleContext(SentenceWithCommaContext.class,0);
		}
		public TaskParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_taskParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).enterTaskParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).exitTaskParameter(this);
		}
	}

	public final TaskParameterContext taskParameter() throws RecognitionException {
		TaskParameterContext _localctx = new TaskParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_taskParameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			taskOperator();
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8589934588L) != 0)) {
				{
				setState(195);
				((TaskParameterContext)_localctx).sentenceWithComma = sentenceWithComma();
				}
			}


			        ((TaskParameterContext)_localctx).json =  "\"task\":\"" + ((((TaskParameterContext)_localctx).sentenceWithComma!=null?_input.getText(((TaskParameterContext)_localctx).sentenceWithComma.start,((TaskParameterContext)_localctx).sentenceWithComma.stop):null) != null ? (((TaskParameterContext)_localctx).sentenceWithComma!=null?_input.getText(((TaskParameterContext)_localctx).sentenceWithComma.start,((TaskParameterContext)_localctx).sentenceWithComma.stop):null).trim () : "") + "\"";
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TaskOperatorContext extends ParserRuleContext {
		public TaskOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_taskOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).enterTaskOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).exitTaskOperator(this);
		}
	}

	public final TaskOperatorContext taskOperator() throws RecognitionException {
		TaskOperatorContext _localctx = new TaskOperatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_taskOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 252L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupsParameterContext extends ParserRuleContext {
		public String json;
		public SentencesArrayContext sentencesArray;
		public GroupsOperatorContext groupsOperator() {
			return getRuleContext(GroupsOperatorContext.class,0);
		}
		public SentencesArrayContext sentencesArray() {
			return getRuleContext(SentencesArrayContext.class,0);
		}
		public GroupsParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupsParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).enterGroupsParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).exitGroupsParameter(this);
		}
	}

	public final GroupsParameterContext groupsParameter() throws RecognitionException {
		GroupsParameterContext _localctx = new GroupsParameterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_groupsParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			groupsOperator();

			        ((GroupsParameterContext)_localctx).json =  "\"groups\":";
			    
			setState(207);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
			case 1:
				{
				setState(204);
				((GroupsParameterContext)_localctx).sentencesArray = sentencesArray();
				_localctx.json += ((GroupsParameterContext)_localctx).sentencesArray.array;
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupsOperatorContext extends ParserRuleContext {
		public GroupsOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupsOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).enterGroupsOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).exitGroupsOperator(this);
		}
	}

	public final GroupsOperatorContext groupsOperator() throws RecognitionException {
		GroupsOperatorContext _localctx = new GroupsOperatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_groupsOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 65280L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeParameterContext extends ParserRuleContext {
		public String json;
		public SentenceContext sentence;
		public TypeOperatorContext typeOperator() {
			return getRuleContext(TypeOperatorContext.class,0);
		}
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public TypeParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).enterTypeParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InlineQueryGrammarListener ) ((InlineQueryGrammarListener)listener).exitTypeParameter(this);
		}
	}

	public final TypeParameterContext typeParameter() throws RecognitionException {
		TypeParameterContext _localctx = new TypeParameterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeParameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			typeOperator();
			setState(213);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7516192764L) != 0)) {
				{
				setState(212);
				((TypeParameterContext)_localctx).sentence = sentence();
				}
			}


			        ((TypeParameterContext)_localctx).json =  "\"type\":\"" + ((((TypeParameterContext)_localctx).sentence!=null?_input.getText(((TypeParameterContext)_localctx).sentence.start,((TypeParameterContext)_localctx).sentence.stop):null) != null ? (((TypeParameterContext)_localctx).sentence!=null?_input.getText(((TypeParameterContext)_localctx).sentence.start,((TypeParameterContext)_localctx).sentence.stop):null).trim () : "") + "\"";
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeOperatorContext extends ParserRuleContext {
		public TypeOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeOperator; }
		@Override
